# test3d

./: CMakeLists.txt  mainwindow.cpp  mainwindow.h  storm.stl  test3d.qrc
